--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,18 +1,421 @@
 @import "fonts.css";
 
 body {
-  background: #ec008c;
-  color: #fff;
+	color: #fff;
+	padding: 0;
+	margin: 0;
 }
 
 h1 {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  margin: 0;
-  font: 20vmin/1 HUGEAvantGardeBold;
-  letter-spacing: -0.06em;
-  text-align: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	margin: 0;
+	font: 20vmin/1 HUGEAvantGardeBold;
+	letter-spacing: -0.06em;
+	text-align: center;
 }
+
+#page-wrapper {
+	height: 100%;
+}
+
+nav ul {
+	list-style: none;
+}
+
+#page-wrapper {
+		background: #ec008c;
+}
+
+.hero-img {
+	width: 100%;
+}
+
+.hero-img img {
+	width: 100%;
+}
+
+/* Mobile Styles */
+
+@media(max-width: 768px){
+
+	nav ul li, 
+	nav ul .secondary label {
+		float: none;
+	} 
+
+	nav ul ul {
+		display: block;
+	}
+
+	ul {
+		padding: 0;
+		margin: 12px 0 0 0;
+	}
+
+	#nav-wrapper {
+		background-color: #fff;
+		color: #000;
+		width: 80%;
+		margin-left: -80%;
+		float: left;
+		min-height: 100%;
+		position: absolute;
+		z-index: 2;
+	}
+
+	#nav-wrapper p, 
+	.secondary label, 
+	.dropdown li {
+		font-family: HUGEAvantGardeBold;
+		font-size: 21px;
+		margin: 0;
+		padding: 0 24px;
+		line-height: 48px;
+	}
+
+	a, 
+	a:active, 
+	a:hover, 
+	a:focus {
+		text-decoration: none;
+		color: #000;
+	}
+
+	#nav-wrapper li {
+		cursor: pointer;
+	}
+
+	#nav-wrapper p:hover, 
+	.secondary label:hover, 
+	.dropdown li:hover{
+		background-color: #eee;
+		cursor: pointer;
+	}
+
+	.dropdown li:hover a {
+		color: #ec008c;
+	}
+
+	#content-wrapper {
+		width: 100%;
+		height: 100%;
+		float: right;
+		margin-right: 0;
+	}
+
+	#navbar-wrapper img {
+		display: none;
+	}
+
+	.toggle:checked + #page-wrapper > #nav-wrapper {
+		margin-left: 0;
+	}
+
+	.toggle:checked + #page-wrapper > #content-wrapper {
+		margin-right: -80%;
+	}
+
+	.toggle:checked + #page-wrapper > .overlay {
+		position: relative;
+	}
+
+	.toggle:checked + #page-wrapper > .overlay:after {
+		content: " ";
+		z-index: 10;
+		display: block;
+		position: absolute;
+		height: 100vh;
+		width: 100%;
+		top: 0;
+		left: 0;
+		right: 0;
+		background: rgba(0, 0, 0, 0.5);
+	}
+
+	.toggle:checked + #page-wrapper > #navbar-wrapper > .icon-wrapper > .nav-icon{
+		background-image: url('/images/toggle-close.svg');
+	}
+
+	.toggle:checked + #page-wrapper > #navbar-wrapper {
+		margin: 0;
+	}
+
+	.toggle:checked + #page-wrapper > #navbar-wrapper > img {
+		display: block;
+		float: left;
+	}
+
+	.toggle, .large-hit {
+		display: none;
+	}
+
+	.large-hit {
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		cursor: pointer;
+		z-index: 11;
+	}
+
+	.toggle:checked + #page-wrapper > #content-wrapper .large-hit {
+		display: block;
+	}
+
+	.icon-wrapper {
+		cursor: pointer;
+		width: 72px;
+		height: 72px;
+		float: right;
+	}
+
+	.nav-icon {
+		width: 72px;
+		height: 72px;
+		background-image: url('/images/toggle-open.svg');
+		background-size: cover;
+		display: block;
+	}
+
+	#content-wrapper, 
+	#nav-wrapper, 
+	#navbar-wrapper{
+		-webkit-transition: margin 0.5s ease;
+		-moz-transition: margin 0.5s ease;
+		-ms-transition: margin 0.5s ease;
+		-o-transition: margin 0.5s ease;
+		transition: margin 0.5s ease;
+	}
+
+	#navbar-wrapper:after {
+		content:"";
+		display:table;
+		clear:both;
+	}
+
+	#navbar-wrapper img{
+		width: 50px;
+		margin: 26px 24px;
+	}
+
+	#navbar-wrapper {
+		/* Firefox */
+		margin-left: -moz-calc(72px - 100%);
+		/* WebKit */
+		margin-left: -webkit-calc(72px - 100%);
+		/* Opera */
+		margin-left: -o-calc(72px - 100%);
+		/* Standard */
+		margin-left: calc(72px - 100%);
+		
+		width: 100%;
+	}
+
+  .secondary { 
+		width: 100%;
+		overflow: hidden;
+  }
+
+  .secondary label { 
+		display: block;
+		height: 48px;
+	}
+
+
+	input.toggle ~ .dropdown { display: none;}
+
+	input.toggle:checked ~ .dropdown { display: block;}
+
+	input.toggle:checked ~ label .arrow {
+		background: url('/images/arrow-down.png') 0 0 repeat;
+		-webkit-transform: rotate(180deg);
+		-moz-transform: rotate(180deg);
+		-ms-transform: rotate(180deg);
+		-o-transform: rotate(180deg);
+		transform: rotate(180deg);
+	}
+
+	input.toggle { display: none; }
+
+	.secondary ul {
+		margin: 0;
+	}
+
+	.secondary li {
+		font-family: 'Galaxie';
+		line-height: 48px;
+		font-size: 16px;
+	}
+
+	.arrow {
+		background-image: url('/images/arrow-down.png');
+		display: inline-block;
+		position: absolute;
+		right: 12px;
+		height: 48px;
+		width: 32px;
+	}
+
+	h1 {
+		font-size: 44px;
+		color: #000;
+		text-align: left;
+		margin-top: 100px;
+		width: 100%;
+		position: relative;
+		padding-left: 120px;
+	}
+
+	p {
+		color: #000;
+		padding: 0 60px;
+		line-height: 24px;
+		margin: 0;
+	}
+
+}
+/* End Mobile Styles */
+
+/* Desktop Styles */
+
+@media (min-width: 768px){
+
+	#navbar-wrapper img {
+		width: 60px;
+		padding: 24px 48px 24px 24px;
+	}
+
+	#navbar-wrapper {
+		width: 132px;
+		float: left;
+	}
+
+	#nav-inner {
+		margin: 0;
+		padding: 0;
+	}
+
+	input.toggle {
+		display: none;
+	}
+
+	ul {
+		list-style: none;
+		padding: 0px;
+		margin: 0px;
+	}
+
+	ul li {
+		display: block;
+		position: relative;
+		float: left;
+	}
+
+	li .dropdown {
+		display: none;
+	}
+
+	ul li a, 
+	ul li a label {
+		display: block; 
+		padding: 30px 16px; 
+		text-decoration: none;
+	  color: #fff; 
+	  font-family: HUGEAvantGardeBold; 
+	  font-size: 16px;
+	}
+
+	ul li a p {
+		margin: 0;
+	}
+
+	ul li:hover a, 
+	ul li:hover a label, 
+	input.toggle:checked ~ label a {
+		background: #fff; 
+		color: #ec008c;
+	}
+
+	input.toggle:checked ~ .dropdown {
+		display: block; 
+		position: absolute; 
+		background-color: #fff; 
+		min-width: 
+		250px;z-index: 999;
+	}
+
+	input.toggle:checked ~ ul .dropdown {
+		display: block;
+	}
+
+	li:hover li {
+		float: none;
+	}
+
+	li:hover a {
+		background: #fff;
+	}
+
+	ul li ul li a {
+		font-family: 'Galaxie';
+		line-height: 48px;
+		font-size: 16px;
+		color: #000;
+		padding: 0 24px;
+	}
+
+	ul li ul li {
+		width: 100%;
+	}
+	
+	ul li:hover ul li a {
+		color: #000;
+	}
+
+	li:hover li:hover a {
+		background: #eee; 
+		color: #ec008c;
+	}
+
+	#drop-nav li ul li {
+		border-top: 0px;
+	}
+
+	#content-wrapper {
+		clear: both;
+		background-color: #fff;
+	}
+
+	h1 {
+		width: 100%;
+		top: 40%;
+		font-size: 100px;
+	}
+
+	#content-wrapper p {
+		color: #000;
+		padding: 60px;
+		max-width: 968px;
+		margin: 0 auto;
+		font-family: 'Galaxie';
+		font-size: 16px;
+	}
+}
+
+@media(min-width: 992px){
+	ul li a, 
+	ul li a label {
+		padding: 30px 24px; 
+		font-size: 21px;
+	}
+
+		h1 {
+		top: 50%;
+		font-size: 120px;
+	}
+}
+
+/* End Desktop Styles */
